trys to fix button styles on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -399,6 +399,10 @@ hr {
   display: table;
   clear: both; }
 
+input[type=text], input[type=button] {
+   -webkit-appearance: none;
+   -webkit-border-radius: 0;
+  }
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
